fix(prefs): plugin installer/updater ext. link icon wrapping on mobile

--- a/src/_prefs.less
+++ b/src/_prefs.less
@@ -168,6 +168,9 @@ body.ttrss_prefs {
   ul.prefs-plugin-list li {
     line-height: unset;
   }
+  :is(.plugin-installer-list, .plugin-updater-list) h3 .material-icons {
+    width: 18px;
+  }
 
   // ---------------------------------------------------------------------------
   // phpinfo
